# enterprise-ai-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: config.yml
src/: main.cpp
src/ai/: inference_engine.hpp  model.cpp  model.hpp
src/api/: http_server.cpp  http_server.h
src/infrastructure/: config.cpp  config.hpp  logger.cpp  logger.hpp
src/services/: ai_service.cpp  ai_service.h
src/utils/: thread_pool.hpp
